--- a/index.html
+++ b/index.html
@@ -16,47 +16,52 @@
   <header>
     <h1>Conexão entre Campo e Cidade</h1>
   </header>
-<table>
-  <thead>
-    <tr>
-      <td>Elemento</td>
-      <td>Contribuição do Campo</td>
-      <td>Contribuição da Cidade</td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Alimentação</td>
-      <td>Agricultura familiar fornece cerca de 70% dos alimentos</td>
-      <td>Distribuição e venda nas cidades</td>
-    </tr>
-    <tr>
-      <td>Construção</td>
-      <td>Fornecimento de madeira e matéria-prima</td>
-      <td>Uso na construção de prédios, casas e infraestrutura</td>
-    </tr>
-    <tr>
-      <td>Saúde e Beleza</td>
-      <td>Ingredientes naturais para cosméticos e medicamentos</td>
-      <td>Indústrias farmacêuticas e cosméticas processam e distribuem</td>
-    </tr>
-    <tr>
-      <td>Tecnologia</td>
-      <td>Uso de máquinas agrícolas no campo</td>
-      <td>Produção e manutenção de tratores, caminhões, colheitadeiras</td>
-    </tr>
-    <tr>
-      <td>Cultura</td>
-      <td>Tradições rurais como a festa junina</td>
-      <td>Reprodução e celebração desses eventos nas cidades</td>
-    </tr>
-    <tr>
-      <td>Economia</td>
-      <td>Produção de bens para consumo urbano</td>
-      <td>Compra, comercialização e geração de renda</td>
-    </tr>
-  </tbody>
-</table>
+
+  <table>
+    <thead>
+      <tr>
+        <td class="titulo-tabela" colspan="3">Conexão Campo Cidade</td>
+      </tr>
+      <tr>
+        <td>Elemento</td>
+        <td>Contribuição do Campo</td>
+        <td>Contribuição da Cidade</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Alimentação</td>
+        <td>Agricultura familiar fornece cerca de 70% dos alimentos</td>
+        <td>Distribuição e venda nas cidades</td>
+      </tr>
+      <tr>
+        <td>Construção</td>
+        <td>Fornecimento de madeira e matéria-prima</td>
+        <td>Uso na construção de prédios, casas e infraestrutura</td>
+      </tr>
+      <tr>
+        <td>Saúde e Beleza</td>
+        <td>Ingredientes naturais para cosméticos e medicamentos</td>
+        <td>Indústrias farmacêuticas e cosméticas processam e distribuem</td>
+      </tr>
+      <tr>
+        <td>Tecnologia</td>
+        <td>Uso de máquinas agrícolas no campo</td>
+        <td>Produção e manutenção de tratores, caminhões, colheitadeiras</td>
+      </tr>
+      <tr>
+        <td>Cultura</td>
+        <td>Tradições rurais como a festa junina</td>
+        <td>Reprodução e celebração desses eventos nas cidades</td>
+      </tr>
+      <tr>
+        <td>Economia</td>
+        <td>Produção de bens para consumo urbano</td>
+        <td>Compra, comercialização e geração de renda</td>
+      </tr>
+    </tbody>
+  </table>
+
   <footer>
     <p>Produzido por Raissa Sales</p>
   </footer>
