adicionando as frases

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
       </tr>
     </tbody>
   </table>
-
+<h1>Conexão Campo e Cidade</h1>
+  <p id="frase">Clique no botão para ver uma frase sobre a conexão entre o campo e a cidade.</p>
+  <button onclick="mudarFrase()">Nova Frase</button>
+ <script src="script.js"></script>
   <footer>
     <p>Produzido por Raissa Sales</p>
   </footer>
