--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
     <h1>Conexão entre Campo e Cidade</h1>
   </header>
-
+<img src="img/a296561c-e2b0-436d-b9cc-f698f5170d11.png" alt="">
   <table>
     <thead>
       <tr>
@@ -61,6 +61,62 @@
       </tr>
     </tbody>
   </table>
+  <div class="container text-center mt-5">
+
+  <div class="card d-inline-block m-3" style="width: 18rem;">
+    <img src="img/foto30cul-501-curitiba-d6.webp" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">Cidade</h5>
+      <p class="card-text">A cidade depende do campo para alimentos e recursos</p>
+      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#cidadeModal">Saiba mais</button>
+    </div>
+  </div>
+
+  <div class="card d-inline-block m-3" style="width: 18rem;">
+    <img src="img/istockphoto-1363571533-612x612.jpg" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">Campo</h5>
+      <p class="card-text">O campo abastece a cidade e preserva o ambiente</p>
+      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#campoModal">Saiba mais</button>
+    </div>
+  </div>
+
+</div>
+
+<div class="modal fade" id="cidadeModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Cidade</h5>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        A cidade concentra serviços, tecnologia e comércio, mas depende do campo para alimentos e recursos naturais
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="campoModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Campo</h5>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        O campo produz alimentos, preserva áreas verdes e mantém o equilíbrio ecológico essencial para as cidades
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <h1>Conexão Campo e Cidade</h1>
   <p id="frase">Clique no botão para ver uma frase sobre a conexão entre o campo e a cidade.</p>
   <button onclick="mudarFrase()">Nova Frase</button>
@@ -68,6 +124,7 @@
   <footer>
     <p>Produzido por Raissa Sales</p>
   </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
